--- a/.tmux.conf
+++ b/.tmux.conf
@@ -32,6 +32,11 @@ set -as terminal-features ",xterm-256color:RGB"
 # KEY BINDINGS
 # ============================================
 
+# Change Prefix
+set -g prefix C-a
+unbind C-b
+bind C-a send-prefix
+
 # Reload config
 bind r source-file ~/.tmux.conf \; display "Config reloaded!"
 
