--- a/.tmux.conf
+++ b/.tmux.conf
@@ -57,6 +57,11 @@ bind -r J resize-pane -D 5
 bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
 
+# Reorder windows
+bind-key S-Left swap-window -t -1\; select-window -t -1
+bind-key S-Right swap-window -t +1\; select-window -t +1
+
+
 # ============================================
 # APPEARANCE
 # ============================================
